maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:30: error: ')' expected but '(' found.
def listVoisins(listCoord:List(Int,Int), xMax:Int, yMax:Int, num:Int):List(Int,Int) = {
                              ^ShortestPathMaze:30: error: '=' expected but ',' found.
def listVoisins(listCoord:List(Int,Int), xMax:Int, yMax:Int, num:Int):List(Int,Int) = {
                                       ^ShortestPathMaze:89: error: illegal start of simple expression
}
^